<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Solution-Challange-Kotlin</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_forgot_my_passw">Forgot my password?  </string>
    <string name="msg_don_t_waste_it">Don\u2019t waste it, share it.</string>
    <string name="lbl_name_surname">Name/Surname</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_login2">Login</string>
    <string name="lbl_welcome_back">Welcome Back</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account yet ? Register</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_loading">LOADING</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_logo">LOGO</string>
    <string name="msg_don_t_have_an_a2">Don\u2019t have an account yet ? </string>
    <string name="msg_already_have_an">Already have an account ? Log in</string>
    <string name="msg_create_an_accou">Create an Account</string>
    <string name="lbl_username">Username</string>
    <string name="msg_e_mail_or_usern">E-mail or Username</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="msg_already_have_an2">Already have an account ? </string>
    <string name="lbl_remember_me">Remember me </string>
    <string name="lbl_log_in">Log in</string>
    <string name="lbl_e_mail">E-mail</string>
    <string name="lbl_search_hint">Search for Product Category</string>
    <string name="categories">Categories</string>
    <string name="points">Your Points:</string>
    <string name="value">1000</string>
    <string name="rating">Your Rating: </string>
    <string name="pick_image_button_text">Pick Image from Gallery</string><string name="lbl_sell_search_hint">Category</string>
    <string name="lbl_product_desc">Enter Product Description</string>
    <string name="lbl_explanation_hint">Explanation</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_enter_address">Enter Your Address</string>
    <string name="lbl_add_product">add product</string>
    <string name="lbl_purchases">Purchases</string>
    <string name="lbl_sellings">Sellings</string>
    <string name="shopping_done">Shopping Completed</string>
    <string name="lbl_save">SAVE</string>
    <string name="lbl_cancel">CANCEL</string>
    <string name="product_infos">Enter Product Information</string>
    <string name="product_tag_search"> Search For Product Tag</string>
    <string name="product_tag_hint">Phone , tablet , pants ...</string>
    <string name="product_category">Product Category</string>
    <string name="product_description"> Description</string>
    <string name="product_description_hint"> Describe the product in a few sentences. Ex: Only worn twice. Size M seems to fit..</string>
    <string name="product_photos">Post Some Photos Of The Product</string>
    <string name="product_address">Enter your address</string>
    <string name="product_take_address">Use My Address</string>
    <string name="add_product">Add A Product</string>
    <string name="selected_item">Selected item:</string>
    <string name="Actions">Actions</string>
    <string name="product_tag">Shirt</string>
    <string name="for_you">Products For You</string>
    <string name="recent_actions">Recent Actions</string>
    <string name="participants">Participants: </string>
</resources>