<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.Sell2Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sellPageConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/page_background"
        android:backgroundTint="#288628"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/sellPageEditCancelButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/lbl_cancel"
            android:textColor="#288628"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutLogout" />

        <Button
            android:id="@+id/sellPageEditAcceptButon"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/lbl_save"
            android:textColor="#288628"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sellPageEditCancelButton"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutLogout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutLogout"
            android:layout_width="375dp"
            android:layout_height="272dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/viewbackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <TextView
                android:id="@+id/sellPageAdressEditText"
                android:layout_width="353dp"
                android:layout_height="125dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_style"
                android:ems="10"
                android:hint="@string/lbl_address"
                android:inputType="text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/takeLocation" />

            <TextView
                android:id="@+id/informationID3"
                android:layout_width="383dp"
                android:layout_height="53dp"
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/baseline_circle_24"
                android:drawablePadding="10sp"
                android:ems="10"
                android:inputType="text"
                android:padding="12sp"
                android:text="@string/product_address"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/takeLocation"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="212dp"
                android:backgroundTint="#288628"
                android:text="@string/product_take_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/informationID3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="380dp"
            android:layout_height="320dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/viewbackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/sellFragmentViewPager"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="6dp"
                android:background="@android:color/darker_gray"
                android:clipToPadding="false"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sellPageImageAddImageView"
                app:layout_constraintTop_toBottomOf="@+id/informationID" />

            <LinearLayout
                android:id="@+id/slideDotLL"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="74dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="6dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sellFragmentViewPager" />

            <ImageButton
                android:id="@+id/sellPageImageAddImageView"
                android:layout_width="57dp"
                android:layout_height="67dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="186dp"
                android:backgroundTint="#288628"
                android:contentDescription="blabla"
                android:src="@drawable/imageadd"
                android:tint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/informationID"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/informationID"
                android:layout_width="383dp"
                android:layout_height="53dp"
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/baseline_circle_24"
                android:drawablePadding="10sp"
                android:ems="10"
                android:inputType="text"
                android:padding="12sp"
                android:text="@string/product_photos"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="376dp"
            android:layout_height="392dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/viewbackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="308dp"
                android:text="@string/product_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sellPageCategoryTextView"
                app:layout_constraintVertical_bias="0.09" />

            <EditText
                android:id="@+id/sellPageProductDescriptionEditText"
                android:layout_width="328dp"
                android:layout_height="114dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/product_description_hint"
                android:padding="5dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <ListView
                android:id="@+id/listView"
                android:layout_width="318dp"
                android:layout_height="114dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="31dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sellPageProductSearchText" />

            <EditText
                android:id="@+id/sellPageProductSearchText"
                android:layout_width="337dp"
                android:layout_height="43dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/searchview_background"
                android:contextClickable="true"
                android:hint="@string/product_tag_hint"
                android:paddingLeft="30dp"
                android:textSize="18sp"
                app:iconifiedByDefault="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:queryBackground="@android:color/transparent" />

            <TextView
                android:id="@+id/informationID2"
                android:layout_width="368dp"
                android:layout_height="55dp"
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/baseline_circle_24"
                android:drawablePadding="10sp"
                android:ems="10"
                android:inputType="text"
                android:padding="14sp"
                android:text="@string/product_infos"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="224dp"
                android:text="@string/product_tag"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/informationID2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="-90dp"
                android:layout_marginBottom="30dp"
                android:text="@string/product_category"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/listView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/sellPageCategoryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="-108dp"
                android:layout_marginBottom="30dp"
                android:hint="category is.."
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/sellPageProductDescriptionEditText"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/listView"
                app:layout_constraintVertical_bias="0.421" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>